--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <script src="path/to/p5.sound.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.min.js"></script> -->
- <script src="https://www.auduno.com/clmtrackr/build/clmtrackr.min.js"></script>
+ <!-- <script src="https://www.auduno.com/clmtrackr/build/clmtrackr.min.js"></script> -->
  <script src="sketch.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
